--- a/opportunities.html
+++ b/opportunities.html
@@ -85,7 +85,7 @@
      <div class="row">
        <div class="col-md-12 col-sm-12 col-xs-12 our_mission_title"> 
         <div class="col-md-12 col-xs-12 col-sm-12 title_mobile" style="display: none;    margin-bottom: 40px;">
-          <h1 style="font-size: 42px;">The best way to predict the future is to create it</h1>
+          <h1 class="fontGraphikBold" style="font-size: 34px;">The best way to predict the future is to create it</h1>
           <button type="button" class="btn btn-alt explore" >Join Us</button>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
@@ -216,41 +216,42 @@
 <div class="col-sm-12 col-md-12 col-xs-12" style="padding: 0">
   <img src="./images/celebration.jpg" width="100%" height="auto" style="border-radius: 0">
 </div>
-<div class="col-md-12 col-sm-12 col-xs-12">
+<div class="col-md-12 col-sm-12 col-xs-12 epic_works">
   <div class="container" style="padding: 40px 15px;">
      <div class="row">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <h5 style="">LIFE @ CRAYON'D</h5>
-          <h2 style="">Second Home. Epic Work. Fun Unlimited. </h2>
-        </div>
-        <div class="col-md-12 col-sm-12 col-xs-12">
-          <p style="font-size: 16px;text-align: justify">We truly believe in the words of Henry Ford who famously said, "If everyone is moving forward together, then success takes care of itself". Our goal is to create an environment that encourages young minds to harness their talent to create long lasting success and put a dent.</p>
+        <div class="col-md-12 col-sm-12 col-xs-12 epic_title">
+          <h5 class="fontGraphikMedium">LIFE @ CRAYON'D</h5>
+          <h2 class="fontGraphikSemibold">Second Home. Epic Work. Fun Unlimited. </h2>
+          <img src="./images/line-3.png" />
+        <!-- </div> -->
+        <!-- <div class="col-md-12 col-sm-12 col-xs-12"> -->
+          <p >We truly believe in the words of Henry Ford who famously said, "If everyone is moving forward together, then success takes care of itself". Our goal is to create an environment that encourages young minds to harness their talent to create long lasting success and put a dent.</p>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12 event_section">
           <div class="col-md-offset-1 col-md-9 col-sm-offset-1 col-sm-9 col-xs-12">
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
               <img src="./images/01_greatculture.png" style="margin-bottom: 20px;">
-              <p style="font-size: 17px;word-break: break-all;">Great Culture</p>
+              <p style="font-size: 17px;word-break: break-all;" class="fontGraphikRegular">Great Culture</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
               <img src="./images/02_exponentiallearning.png" style="margin-bottom: 20px;">
-              <p style="font-size: 17px;">Exponential Learning</p>
+              <p style="font-size: 17px;" class="fontGraphikRegular">Exponential Learning</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
               <img src="./images/03_thoughtleadership.png" style="margin-bottom: 20px;">
-              <p style="font-size: 17px;">Thought Leadership</p>
+              <p style="font-size: 17px;" class="fontGraphikRegular">Thought Leadership</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
               <img src="./images/04_ambience.png" style="margin-bottom: 20px;">
-              <p style="font-size: 17px;">Ambience</p>
+              <p style="font-size: 17px;" class="fontGraphikRegular">Ambience</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
               <img src="./images/05_freedom.png" style="margin-bottom: 20px">
-              <p style="font-size: 17px;">Freedom</p>
+              <p style="font-size: 17px;" class="fontGraphikRegular">Freedom</p>
             </div>
             <div class="col-md-4 col-sm-6 col-xs-6 card1">
               <img src="./images/06_cricket.png" style="margin-bottom: 20px">
-              <p style="font-size: 17px;">Cricket</p>
+              <p style="font-size: 17px;" class="fontGraphikRegular">Cricket</p>
             </div>  
           </div>
         </div>
@@ -258,12 +259,12 @@
   </div>
 </div>
 
-<div class="col-md-12 col-xs-12 col-sm-12" style="background-color: #f2f2f2"> 
+<div class="col-md-12 col-xs-12 col-sm-12 fun_gallery" style="background-color: #f2f2f2"> 
   <div class="container">
     <div class="col-md-12 col-xs-12 col-sm-12 ambience_card" style="padding: 30px 0px 130px 0px;">
-          <div class="col-md-4 imge_width" style="float: right;margin-top: 42px; height: 410px;">
-            <h5 style="    padding-bottom: 8px;">LOOK AT THE AMBIENCE</h5>
-            <img class="img-responsive" src="./images/05_ambiencepic.png" style="width: 100%;height: 100%">
+          <div class="col-md-4 imge_width" style="float: right;margin-top: 26px; height: 410px;">
+            <h5 style="    padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
+            <img class="img-responsive" src="./images/05_ambiencepic.png" style="width: 100%;height: 100%;border-radius: 8px;">
           </div>
           <div class="col-md-8 col-sm-12 col-xs-12">
             <div class="col-md-6 col-sm-12 col-xs-12 img_look">
@@ -285,103 +286,133 @@
         </div>
   </div>
 </div>
-<div class="col-md-12 col-sm-12 col-xs-12">
+
+
+ <!-- our_secrets -->
+ <div class="col-md-12 col-xs-12 col-sm-12 our_secrets" style="background-color: #fff;">
   <div class="container">
-    <div class="col-md-12">
-          <div class="col-md-offset-1 col-md-9 hiring_card">
-            <h2 style="margin-top: 0;color: #fff">Interested? We're hiring.</h2>
-            <p style="color: #fff;opacity: 1">If you are crazy and looking to be part of an amazing set of people doing awe-inspiring work to change the world, you have a compelling reason to join us.</p>
-          </div>  
+      <div class="text">
+          <h1 class="fontGraphikSemibold">
+              Our secrets.
+          </h1>
+          <img alt="line-3" src="./images/line-3.png" />
+          <!-- <p class="banner--text fontLatoRegular">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br /> tempor incididunt .
+          </p> -->
+      </div>
+      <div class="row" style="background-image: none;">
+          <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
+              <div class="card">
+                  <div class="card__body">
+                      <!-- <i class="fa fa_icon fa-archive" aria-hidden="true"></i> -->
+                      <span class="fa_icon Oval_code">
+                          <img alt="code" src="./images/code.svg" />
+                      </span>
+                      <p class="card-title fontGraphikSemibold">Clean Code</p>
+                      <p class="card-text fontLatoRegular">
+                          Lorem ipsum dolor sit amet, 
+                          consectetur adipiscing elit, sed do elit eiusmod incididunt  tempor 
+                      </p>
+                  </div>
+              </div>
+          </div>
+          <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
+              <div class="card">
+                  <div class="card__body">
+                      <span class="fa_icon Oval_pro">
+                          <img alt="programming" src="./images/programming.svg" />
+                      </span>
+                      <p class="card-title fontGraphikSemibold">Tets driven Development</p>
+                      <p class="card-text fontLatoRegular">
+                          Lorem ipsum dolor sit amet, 
+                          consectetur adipiscing elit, sed do elit eiusmod incididunt  tempor
+                      </p>
+                  </div>
+              </div>
+          </div>
+          <div class="card__body_div col-12 col-sm-12 col-xs-12 col-md-4 col-lg-4 col-xl-4">
+              <div class="card">
+                  <div class="card__body">
+                      <span class="fa_icon Oval_flash">
+                          <img alt="shape" src="./images/shape.svg" />
+                      </span>
+                      <p class="card-title fontGraphikSemibold">Agile</p>
+                      <p class="card-text fontLatoRegular">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
+                      </p>
+                  </div>
+              </div>
+          </div>
       </div>
   </div>
-</div>
-<section style="margin-top: 50px">
-<div class="container">
-  <div class="row">
-     <div class="col-md-12">
-          <div class=" col-md-12 col-sm-12 col-xs-12 job_type" style="padding: 80px 0px;">
-            <div class="col-sm-12 col-md-12 col-xs-12">
-              <h5>THE OPPORTUNITY</h5>
-            </div>
-            <div class="col-sm-4 col-md-4 col-xs-12" >
-              <h3 style="font-weight: bold;">Express</h3>
-              <p>
-                We create the kind of culture and ambience that's necessary for everyone to express their talent and passion.
-                <!-- The key to make the best use of your talent and passion is to express it towards a large vision. -->
-              </p>
-            </div>
-            <div class="col-sm-4 col-md-4 col-xs-12">
-              <h3 style="font-weight: bold;">Impress</h3>
-              <p>
-                We love people who leave an unerasable impression on the team through the impact of their work.
-              </p>
-            </div>
-            <div class="col-sm-4 col-md-4 col-xs-12">
-              <h3 style="font-weight: bold;">Progress</h3>
-              <p>
-                We believe that improvement, achievement, and success have no meaning without continual growth and progress. 
-              </p>
-            </div>
-          </div>  
-      </div>
-  </div>
-  <div class="col-xs-12 col-sm-12 col-md-12">
-    <hr style=" border-top: 3px solid #eee;" />
-  </div>
-  <div class="row carrier_details">
+ </div>
+<!-- end -->
+
+
+  <div class="row carrier_details current_opening">
+    <div class="container">
+    <div class="col-md-12 col-xs-12 col-sm-12">
+      <h1 class="fontGraphikSemibold">
+          Current Openings
+      </h1>
+      <img alt="line-3" src="./images/line-3.png" />
+    </div>
+    <div class="col-md-12 col-xs-12 col-sm-12 opening_section">
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card" >
         <img class="position_img" src="./images/01_front_end_developer.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">Front-End</br>Developer</h4>
+        <h4 class="fontGraphikRegular opening_titles">Front-End</br>Developer</h4>
         <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/507995-front-end-developer';" class="btn btn-alt">View Details</button>
     </div>
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card">
         <img class="position_img" src="./images/02_back_end_developer.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">Back-End</br>Developer</h4>
+        <h4 class="fontGraphikRegular opening_titles">Back-End</br>Developer</h4>
         <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521126-back-end-developer';" class="btn btn-alt">View Details</button>
     </div>
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card">
         <img class="position_img" src="./images/03_fullstack_developer.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">Full-Stack</br>Developer</h4>
+        <h4 class="fontGraphikRegular opening_titles">Full-Stack</br>Developer</h4>
         <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521739-full-stack-developer';" class="btn btn-alt">View Details</button>
     </div>
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card">
         <img class="position_img" src="./images/04_devops_engineer.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">DevOps</br>Engineer</h4>
+        <h4 class="fontGraphikRegular opening_titles">DevOps</br>Engineer</h4>
         <button type="button" class="btn btn-alt">Write to Us</button>
     </div>
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card" >
         <img class="position_img" src="./images/05_ios_developer.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">iOS</br>Developer</h4>
+        <h4 class="fontGraphikRegular opening_titles">iOS</br>Developer</h4>
         <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521765-ios-developer';" class="btn btn-alt">View Details</button>
     </div>
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card">
         <img class="position_img" src="./images/06_qa_specialist.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">QA<br/>Specialist</h4>
+        <h4 class="fontGraphikRegular opening_titles">QA<br/>Specialist</h4>
         <button type="button" class="btn btn-alt">Write to Us</button>
     </div>
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card">
         <img class="position_img" src="./images/07_content_writer.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">Content<br/>Writer</h4>
+        <h4 class="fontGraphikRegular opening_titles">Content<br/>Writer</h4>
         <button type="button" class="btn btn-alt">Write to Us</button>
     </div>
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card">
         <img class="position_img" src="./images/08_visual_designer.png" alt="Cinque Terre" width="304" height="236"> 
-        <h4 style="">Visual<br/>Designer</h4>
+        <h4 class="fontGraphikRegular opening_titles">Visual<br/>Designer</h4>
         <button type="button" class="btn btn-alt">Write to Us</button>
     </div>
   </div>
-   <div class="col-xs-12 col-sm-12 col-md-12">
-    <span><hr style="border-top: 3px solid #eee;" /></span>
+    </div>
   </div>
-  <div class="col-md-12 col-sm-12 col-xs-12 contact" style="margin-bottom: 30px;">
+   <!-- <div class="col-xs-12 col-sm-12 col-md-12">
+    <span><hr style="border-top: 3px solid #eee;" /></span>
+  </div> -->
+  <!-- <div class="col-md-12 col-sm-12 col-xs-12 contact" style="margin-bottom: 30px;"> -->
     <!-- <div class="col-sm-2 hidden-xs col-md-2">
       <img src="./images/envelope.png" width="" height="" class="envelope">
     </div> -->
     <!-- <div class="col-sm-10 col-md-10 col-xs-12" > -->
-      <p style="margin-bottom: 0;" >OR EMAIL YOUR RESUME, WE'LL FIGURE OUT WHERE YOU FIT IN</p>
-      <h6 style="font-size: 20px"><a href="mailto:life@crayond.com?Subject=Hey" target="_top">life@crayond.com</a></h6>
+      <!-- <p style="margin-bottom: 0;" >OR EMAIL YOUR RESUME, WE'LL FIGURE OUT WHERE YOU FIT IN</p> -->
+      <!-- <h6 style="font-size: 20px"><a href="mailto:life@crayond.com?Subject=Hey" target="_top">life@crayond.com</a></h6> -->
     <!-- </div> -->
-  </div>
+  <!-- </div> -->
 </div>  
 </section>
 <!-- Start Section -->
@@ -391,7 +422,7 @@
     <img data-aos="zoom-out-left" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
     <div class="container billion">
         <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
-            <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button>
+            <button class="button fontLatoRegular" style="width: 230px;">Let's get serious &nbsp <span> </span></button>
         </div>
         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
             <h1 class="fontGraphikSemibold">What’s your next billion-<br />dollar idea?</h1>
@@ -409,7 +440,7 @@
 </section>
 <!-- end -->
   <!-- main footer -->
-  <section class="footer">
+  <section class="footer" style="background-color: #fff;">
       <div class="container">
           <div class="row">
               <div class="col-12 col-xs-12 col-ms-12 col-md-4 col-lg-4 col-xl-4 logo_address">
@@ -464,7 +495,7 @@
   </section>
   <!-- end -->
   <!-- footer_social_media -->
-  <section class="footer_social_media">
+  <section class="footer_social_media" style="background-color: #fff;">
       <footer>
           <div class="container">
               <div class="row">
