careers page title

--- a/opportunities.html
+++ b/opportunities.html
@@ -75,10 +75,10 @@
     </figure>
   </div>
 </div>
-<!-- <div class="col-md-12 col-xs-12 col-sm-12 title">
-    <h1 style="color: #fff;font-size: 42px">Really cool video parallax</h1>
+<div class="col-md-12 col-xs-12 col-sm-12 title_of_careers">
+    <h1 class="fontGraphikBold" style="color: #fff;font-size: 42px;text-shadow: 2px 2px 5px #000;">Really cool video parallax</h1>
     <button type="button" class="btn btn-danger" style="width: 150px;border-radius: 0;padding: 10px;">Explore Us</button>
-  </div> -->
+  </div>
 <div class="stretch">
   
   <div class="container our_mission_section" >
