--- a/index.html
+++ b/index.html
@@ -63,14 +63,13 @@
     </div>
     <!-- end -->
     <!-- background video -->
-    <section class="first_section video_player" >
+    <!-- <section class="first_section video_player" >
         <div class="container-fluid" style="padding: 0px;">
             <video autoplay loop >
-                <!-- <source src="http://videos.ctfassets.net/xny2w179f4ki/624R5hsLvnQ36lRNjssvOB/5e49f2cc809333610c32f8b941761ce2/Homepage_Airplane_Guy_Working_1.mp4" type="video/mp4"> -->
                 <source src="./assets/vidoes/Website Animation final.mp4" type="video/mp4">
             </video>
         </div>
-    </section>
+    </section> -->
     <!-- end -->
     <!-- main title -->
     <section class="first_section header_text">
