added gif responsive and contact

--- a/index.html
+++ b/index.html
@@ -360,8 +360,7 @@
                             </span>
                             <p class="card-title fontGraphikSemibold">Clean Code</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet, 
-                                consectetur adipiscing elit, sed do elit eiusmod incididunt  tempor 
+                                    Flawless code that your programmers can understand, modify and maintain with ease.
                             </p>
                         </div>
                     </div>
@@ -374,8 +373,7 @@
                             </span>
                             <p class="card-title fontGraphikSemibold">Tets driven Development</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet, 
-                                consectetur adipiscing elit, sed do elit eiusmod incididunt  tempor
+                                    We stand firm on testing our products right, every step of the way. Break the negative feedback loop!
                             </p>
                         </div>
                     </div>
@@ -414,7 +412,7 @@
                             </span>
                             <p class="card-title fontGraphikSemibold">Collaboration</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
+                                    Building a dream has a lot to do with teamwork. We thrive on taking the CAN out of CAN’T and racing to the finish line. It is what makes us the best at what we do.
                             </p>
                         </div>
                     </div>
