--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">Human-centered design, for products your customers love</h1>
+                            <h1 class="fontGraphikSemibold">Design products your customers love</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                         <img alt="line-left" src="./images/line-left.png" />
@@ -242,14 +242,14 @@
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
-                            <h1 class="fontGraphikSemibold">World-class products, built with modern engineering</h1>
+                            <h1 class="fontGraphikSemibold">Build better, with modern engineering</h1>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                              <img alt="line-left" src="./images/line-left.png" />
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
                             <p class="text_para fontLatoRegular">
-                                Our cutting edge technology ensures your product looks and works great. Go ahead and impress customers with products that are scalable, flexible, and robust.
+                                    Our cutting edge technology ensures your product looks and works great. Product led growth is not a distant dream with scalable, flexible, and robust creations
                             </p>
                         </div>
                         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12">
@@ -343,7 +343,7 @@
         <div class="container">
             <div class="text">
                 <h1 class="fontGraphikSemibold">
-                    Our secrets.
+                        Our secret to building great products
                 </h1>
                 <img alt="line-3" src="./images/line-3.png" />
                 <p class="banner--text fontLatoRegular">
@@ -358,9 +358,9 @@
                             <span class="fa_icon Oval_code">
                                 <img alt="code" src="./images/code.svg" />
                             </span>
-                            <p class="card-title fontGraphikSemibold">Clean Code</p>
+                            <p class="card-title fontGraphikSemibold">Clean code</p>
                             <p class="card-text fontLatoRegular">
-                                    Flawless code that your programmers can understand, modify and maintain with ease.
+                                 Flexible and extensible code that you can understand, modify and maintain with ease.
                             </p>
                         </div>
                     </div>
@@ -371,9 +371,9 @@
                             <span class="fa_icon Oval_pro">
                                 <img alt="programming" src="./images/programming.svg" />
                             </span>
-                            <p class="card-title fontGraphikSemibold">Tets driven Development</p>
+                            <p class="card-title fontGraphikSemibold">Test-driven development</p>
                             <p class="card-text fontLatoRegular">
-                                    We stand firm on testing our products right, every step of the way. Break the negative feedback loop!
+                                Break the negative feedback loop with products that are tested right, every step of the way. 
                             </p>
                         </div>
                     </div>
@@ -384,9 +384,9 @@
                             <span class="fa_icon Oval_flash">
                                 <img alt="shape" src="./images/shape.svg" />
                             </span>
-                            <p class="card-title fontGraphikSemibold">Agile</p>
+                            <p class="card-title fontGraphikSemibold">Agility</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
+                                We learn and adapt. Our agile process embraces change till we reach perfection.
                             </p>
                         </div>
                     </div>
@@ -399,7 +399,7 @@
                             </span>
                             <p class="card-title fontGraphikSemibold">Ownership</p>
                             <p class="card-text fontLatoRegular">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do elit eiusmod incididunt tempor
+                                As the crew of your product’s journey, it gives us immense pleasure to see your product take flight.
                             </p>
                         </div>
                     </div>
@@ -412,7 +412,7 @@
                             </span>
                             <p class="card-title fontGraphikSemibold">Collaboration</p>
                             <p class="card-text fontLatoRegular">
-                                    Building a dream has a lot to do with teamwork. We thrive on taking the CAN out of CAN’T and racing to the finish line. It is what makes us the best at what we do.
+                                Work with a team that loves building together. We thrive on taking the CAN out of CAN’T.
                             </p>
                         </div>
                     </div>
@@ -461,9 +461,9 @@
                         <div class="row">
                             <blockquote class="fontGraphikLight details_of_crayond">
                                 <!-- <span class="fontGraphikLight " style="font-size: 2.5rem;font-weight: 700;">&ldquo;</span> -->
-                                Crayon’d let us abstract the billing part and keep it separate from our
+                                Crayon’d let us abstract <br/>the billing part and keep it<br/> separate from our<br/>
                                 <span class="fontGraphikSemibold text_bold">working code base.</span>
-                                Ever since we started using it.
+                                Ever <br/>since we started using it.
                                 <span class="fontGraphikLight "
                                     style="font-size: 2.5rem;font-weight: 700;">&rdquo;</span>
                             </blockquote>
@@ -518,9 +518,11 @@
                     <p class="fontGraphikRegular">All rights reserved</p>
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <p class="fontLatoBold footer_menu">
-                        Company
-                    </p>
+                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                        <span class="fontLatoBold footer_menu">
+                            Company
+                        </span>
+                    </a>
                     <!-- <ul>
                         <li><span class="fontLatoRegular">Who we are?</span></li>
                         <li><span class="fontLatoRegular">Pricing</span></li>
@@ -529,9 +531,11 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <p class="fontLatoBold  footer_menu">
+                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                     <span class="fontLatoBold  footer_menu">
                         Solutions
-                    </p>
+                     </span>
+                    </a>
                     <!-- <ul>
                         <li><span class="fontLatoRegular">Entrepreneur</span></li>
                         <li><span class="fontLatoRegular">Startup Owner</span></li>
@@ -540,9 +544,11 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <p class="fontLatoBold footer_menu">
+                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                     <span class="fontLatoBold footer_menu">
                         Resources
-                    </p>
+                     </span>
+                     </a>
                     <!-- <ul>
                         <li><span class="fontLatoRegular">Blog</span></li>
                         <li><span class="fontLatoRegular">Case Studies</span></li>
@@ -550,9 +556,11 @@
                     </ul> -->
                 </div>
                 <div class="col-6 col-sm-12 col-xs-6 col-md-2 col-lg-2 col-xl-2" style="margin: auto;">
-                    <p class="fontLatoBold footer_menu">
+                    <a href="./careers.html"  alt="Company" style="color: unset;">
+                     <span class="fontLatoBold footer_menu">
                         Products
-                    </p>
+                    </span>
+                    </a>
                     <!-- <ul>
                         <li><span class="fontLatoRegular">User Story Writer</span></li>
                         <li><span class="fontLatoRegular">Mapper</span></li>
@@ -630,7 +638,7 @@
     var didScroll;
     var lastScrollTop = 0;
     var delta = 5;
-    var navbarHeight = $('header').outerHeight();
+    var navbarHeight = $('.header').outerHeight();
 
     $(window).scroll(function(event){
         didScroll = true;
@@ -645,7 +653,6 @@
 
     function hasScrolled() {
         var st = $(this).scrollTop();
-        
         // Make sure they scroll more than delta
         if(Math.abs(lastScrollTop - st) <= delta)
             return;
@@ -660,6 +667,9 @@
             if(st + $(window).height() < $(document).height()) {
                 $('.header').removeClass('nav-up').addClass('nav-down');
             }
+        }
+        if(st < 100){
+            $('.header').removeClass('nav-down');
         }
         
         lastScrollTop = st;
