--- a/opportunities.html
+++ b/opportunities.html
@@ -49,7 +49,7 @@
                       <span><a class="fontLatoRegular" href="/">Contact</a></span>
                   </div>
                   <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
-                      <button class="btn btn-outline-primary fontLatoBlack">SIGN IN</button>
+                      <button class="btn btn-outline-primary fontLatoBlack">Join Us</button>
                   </div>
               </div>
           </div>
@@ -76,10 +76,10 @@
   </div>
 </div>
 <div class="col-md-12 col-xs-12 col-sm-12 title_of_careers">
-    <h1 class="fontGraphikBold" style="color: #fff;font-size: 42px;text-shadow: 2px 2px 5px #000;">Really cool video parallax</h1>
+    <h1 class="fontGraphikBold" style="color: #fff;font-size: 42px;text-shadow: 2px 2px 5px #00000057;margin-bottom: 20px;">The best way to predict the future is to create it.</h1>
     <!-- <button type="button" class="banner_button" >Explore Us</button> -->
     <button class="banner_button fontLatoBlack" style="width: 252px;">
-        <span> Explore Us &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i>
+        <span> Join Us &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i>
     </span></button>
   </div>
 <div class="stretch">
@@ -95,7 +95,7 @@
           <h5 class="fontGraphikMedium">OUR MISSION</h5>
           <h2 class="fontGraphikSemibold">Make dreams come true</h2>
         </div>
-        <img src="./images/line-3.png" />
+        <img class="line_path" src="./images/line-3.png" />
         <div class="col-md-12 col-sm-12 col-xs-12">
           <p class="fontLatoRegular mission_discription">We understand that it's an incredibly large mission that our team of young minds is committed to succeed in. Crayon'd has enjoyed helping startup founders to take their dream one step closer by building a winning product in the marketplace.
          
@@ -113,7 +113,7 @@
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
                 <h1 class="fontGraphikSemibold">Clarity</h1>
-                <img src="./images/line-left.png" />
+                <img class="line_path" src="./images/line-left.png" />
                  <p class="fontLatoRegular slider_discription">If you don’t stand for something, you will fall for anything. It’s such a messy world filled with distractions often disguised in the form of opportunities. You will end up nowhere if you don’t have a strong purpose that justifies each of your action. What is your vision statement?. Is your entire team glued to it?. Do you know where you are going?. Clarity is Mastery!</p>
               </div>
              </div>
@@ -126,7 +126,7 @@
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
                 <h1 class="fontGraphikSemibold">Culture</h1>
-                <img src="./images/line-left.png" />
+                <img class="line_path" src="./images/line-left.png" />
                  <p class="fontLatoRegular slider_discription">What makes your brand different?. Why should interesting people associate with you?. To win in the marketplace, you must first win in the workplace. The 3 ingredients of a winning culture according to me are Mutual Respect, Growth, Motivation. Culture has the force to make or break teams. A right culture is a catalyst for exponential growth. Culture is King!</p>
               </div>
              </div>
@@ -139,7 +139,7 @@
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
                 <h1 class="fontGraphikSemibold">Competence</h1>
-                <img src="./images/line-left.png" />
+                <img class="line_path" src="./images/line-left.png" />
                  <p class="fontLatoRegular slider_discription">The competence has a direct impact on how far the brand can grow how soon. It is imperative for individuals to stand up and it’s important for teams to evolve over time. The learning curves are getting shorter and limits for innovation are stretched. Extra-ordinary will soon become the norm. The teams that can out think and out class others will win over the long run. Competence Thrives!
                  </p>
               </div>
@@ -153,7 +153,7 @@
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
                 <h1 class="fontGraphikSemibold">Commitment</h1>
-                <img src="./images/line-left.png" />
+                <img class="line_path" src="./images/line-left.png" />
                  <p class="fontLatoRegular slider_discription">Most overnight success took years. Every startup is a journey and most often than not everything is an unknown. If there can be one constant, that has got to be the vision. If there is something that can get you to the vision, it is commitment. The chances of a startup success is magnified if the entire team has the same level of commitment as that of the founding team towards the vision. Commitment Propels!</p>
               </div>
              </div> 
@@ -166,7 +166,7 @@
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
                 <h1 class="fontGraphikSemibold">Collaboration</h1>
-                <img src="./images/line-left.png" />
+                <img class="line_path" src="./images/line-left.png" />
                  <p class="fontLatoRegular slider_discription">Collaboration is the keystone of startup success. It is incredible to think what is possible if few minds can come together with passion and skill. Very few succeed alone but almost everyone can succeed in a team. Collaboration is about bringing many gifts from each individual and sharing them in pursuit of a common goal. It’s about bringing ideas, passion, mind, heart, and soul to the Organization leadership and culture. Collaboration Wins!
                  </p>
               </div>
@@ -174,7 +174,7 @@
           </div>
           </div>
           <!-- Left and right controls -->
-          <!-- <div class="mobile_arrow">
+          <div class="mobile_arrow">
             <a class="left" href="#myCarousel" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left"style="color: gray;"></span>
                   <span class="sr-only">Previous</span>
@@ -183,7 +183,7 @@
                   <span class="glyphicon glyphicon-chevron-right" style="color: gray;"></span>
                   <span class="sr-only">Next</span>
                 </a>
-          </div> -->
+          </div>
                 
           <!-- <div class="col-md-12 col-sm-12 col-xs-12 desktop_arrow">
             <div class="col-md-6 col-sm-6 col-xs-12" style="position: absolute;right: 0;bottom:20px;">
@@ -225,7 +225,7 @@
         <div class="col-md-12 col-sm-12 col-xs-12 epic_title">
           <h5 class="fontGraphikMedium">LIFE @ CRAYON'D</h5>
           <h2 class="fontGraphikSemibold">Second Home. Epic Work. Fun Unlimited. </h2>
-          <img src="./images/line-3.png" />
+          <img class="line_path" src="./images/line-3.png" />
         <!-- </div> -->
         <!-- <div class="col-md-12 col-sm-12 col-xs-12"> -->
           <p >We truly believe in the words of Henry Ford who famously said, "If everyone is moving forward together, then success takes care of itself". Our goal is to create an environment that encourages young minds to harness their talent to create long lasting success and put a dent.</p>
@@ -266,7 +266,7 @@
   <div class="container">
     <div class="col-md-12 col-xs-12 col-sm-12 ambience_card" style="padding: 56px 0px 96px 0px">
           <div class="col-md-4 imge_width" style="float: right;margin-top: 26px; height: 410px;">
-            <h5 style="    padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
+            <h5 style="padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
             <img class="img-responsive" src="./images/05_ambiencepic.png" style="width: 100%;height: 100%;border-radius: 8px;">
           </div>
           <div class="col-md-8 col-sm-12 col-xs-12">
@@ -285,6 +285,7 @@
           </div>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12 ambience_card_mobile">
+              <h5 style="padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
               <img class="img-responsive" style="width: 100%; padding: 20px 0px 90px 0px;" src="./images/04_ambiencepic.png" style="" >
         </div>
   </div>
@@ -298,7 +299,7 @@
           <h1 class="fontGraphikSemibold">
               Our Team
           </h1>
-          <img alt="line-3" src="./images/line-3.png" />
+          <img class="line_path" alt="line-3" src="./images/line-3.png" />
           <!-- <p class="banner--text fontLatoRegular">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br /> tempor incididunt .
           </p> -->
@@ -354,16 +355,16 @@
     <div class="container">
     <div class="col-md-12 col-xs-12 col-sm-12">
       <h1 class="fontGraphikSemibold">
-          Current Openings
+        Opportunities @ Crayon'd
       </h1>
-      <img alt="line-3" src="./images/line-3.png" />
+      <img class="line_path" alt="line-3" src="./images/line-3.png" />
     </div>
     <div class="col-md-12 col-xs-12 col-sm-12 opening_section">
     <div class="col-sm-6 col-md-3 col-xs-6 positions_card" >
         <img class="position_img" src="./images/01_front_end_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Front-End</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/507995-front-end-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/507995-front-end-developer';" >
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
       </button>
     </div>
@@ -371,7 +372,7 @@
         <img class="position_img" src="./images/02_back_end_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Back-End</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521126-back-end-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521126-back-end-developer';">
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
       </div>
@@ -379,7 +380,7 @@
         <img class="position_img" src="./images/03_fullstack_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">Full-Stack</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521739-full-stack-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521739-full-stack-developer';">
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
@@ -395,7 +396,7 @@
         <img class="position_img" src="./images/05_ios_developer.png" alt="Cinque Terre" width="304" height="236"> 
         <h4 class="fontGraphikRegular opening_titles">iOS</br>Developer</h4>
         <!-- <button type="button" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521765-ios-developer';" class="btn btn-alt">View Details</button> -->
-        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;">
+        <button class="banner_button fontLatoBlack" style="width: 165px;padding: 10px;" onclick="window.location.href = 'https://angel.co/thecrayond/jobs/521765-ios-developer';">
             <span> View Details &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i></span>
         </button>
     </div>
@@ -435,10 +436,13 @@
     <img data-aos="zoom-out-left" data-aos-duration="5000" src="./images/oval-copy-6.png" class="ovel-6" />
     <div class="container billion">
         <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
-            <button class="button fontLatoRegular" style="width: 230px;">Join our Team &nbsp <span> </span></button>
+            <button class="button fontLatoRegular" style="width: 230px;">Join Us &nbsp <span> </span></button>
         </div>
         <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="text-align: center;">
-            <h1 class="fontGraphikSemibold">Interested in joining our <br />team?</h1>
+            <h1 class="fontGraphikSemibold">Interested? We're hiring.</h1>
+            <p style="color: #fff;">
+              If you are crazy and looking to be part of an amazing set of people doing awe-inspiring work to change the world, you have a compelling reason to join us.
+            </p>
         </div>
         <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 button_div">
             <button class="banner_button fontLatoBlack">
