add arrow in slider for mobile

--- a/opportunities.html
+++ b/opportunities.html
@@ -49,7 +49,7 @@
                       <span><a class="fontLatoRegular" href="/">Contact</a></span>
                   </div>
                   <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
-                      <button class="btn btn-outline-primary fontLatoBlack">Join Us</button>
+                      <button class="btn btn-outline-primary fontLatoBlack">JOIN US</button>
                   </div>
               </div>
           </div>
@@ -76,10 +76,10 @@
   </div>
 </div>
 <div class="col-md-12 col-xs-12 col-sm-12 title_of_careers">
-    <h1 class="fontGraphikBold" style="color: #fff;font-size: 42px;text-shadow: 2px 2px 5px #00000057;margin-bottom: 20px;">The best way to predict the future is to create it.</h1>
+    <h1 class="fontGraphikBold" style="color: #fff;font-size: 42px;text-shadow: 2px 2px 5px #00000078;margin-bottom: 20px;">The best way to predict the future is to create it.</h1>
     <!-- <button type="button" class="banner_button" >Explore Us</button> -->
     <button class="banner_button fontLatoBlack" style="width: 252px;">
-        <span> Join Us &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i>
+        <span> JOIN US &nbsp <i class="fa fa-chevron-right" aria-hidden="true"></i>
     </span></button>
   </div>
 <div class="stretch">
@@ -89,7 +89,7 @@
        <div class="col-md-12 col-sm-12 col-xs-12 our_mission_title"> 
         <div class="col-md-12 col-xs-12 col-sm-12 title_mobile" style="display: none;    margin-bottom: 40px;">
           <h1 class="fontGraphikBold" style="font-size: 34px;">The best way to predict the future is to create it</h1>
-          <button type="button" class="btn btn-alt explore" >Join Us</button>
+          <button type="button" class="btn btn-alt explore" >JOIN US</button>
         </div>
         <div class="col-md-12 col-sm-12 col-xs-12">
           <h5 class="fontGraphikMedium">OUR MISSION</h5>
@@ -285,7 +285,7 @@
           </div>
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12 ambience_card_mobile">
-              <h5 style="padding-bottom: 8px;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
+              <h5 style="padding-bottom: 8px;text-align: center;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
               <img class="img-responsive" style="width: 100%; padding: 20px 0px 90px 0px;" src="./images/04_ambiencepic.png" style="" >
         </div>
   </div>
