changed color in theme v3 backcard

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                 <p class="card--text fontLatoRegular">
                                     If you have an awesome product idea, we can build you a world-class product guaranteed to fit your dream.
                                 </p>
-                                <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
+                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -157,7 +157,7 @@
                                 <p class="card--text fontLatoRegular">
                                     If you’re looking for ways to improve an existing product, our cutting edge technology can set you apart.
                                 </p>
-                                <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
+                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                             </div>
                         </div>
                     </div>
@@ -172,7 +172,7 @@
                                 <p class="card--text fontLatoRegular">
                                         Want to focus on improving existing products and reaching unexplored markets? Leave your next product to us!
                                 </p>
-                                <!-- <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a> -->
+                                <a href="#!" class="btnn">EXPLORE &nbsp &nbsp<span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a>
                             </div>
                         </div>
                     </div>
