--- a/opportunities.html
+++ b/opportunities.html
@@ -105,6 +105,17 @@
           <!-- Wrapper for slides -->
           <div class="col-sm-12 col-md-12 col-xs-12" style="padding: 40px 0px 0px 0px; margin-top: 60px">
             <div class="carousel-inner">
+              <!-- Left and right controls -->
+              <div class="mobile_arrow">
+                  <a class="left" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"style="color: gray;"></span>
+                        <span class="sr-only">Previous</span>
+                      </a>
+                      <a class="right " href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" style="color: gray;"></span>
+                        <span class="sr-only">Next</span>
+                      </a>
+                </div>
             <div class="item active">
               <div class="col-md-12 col-md-12 col-xs-12 ">
               <div class="col-md-6 col-sm-6 col-xs-12 slider_img">
@@ -174,7 +185,7 @@
           </div>
           </div>
           <!-- Left and right controls -->
-          <div class="mobile_arrow">
+          <!-- <div class="mobile_arrow">
             <a class="left" href="#myCarousel" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left"style="color: gray;"></span>
                   <span class="sr-only">Previous</span>
@@ -183,7 +194,7 @@
                   <span class="glyphicon glyphicon-chevron-right" style="color: gray;"></span>
                   <span class="sr-only">Next</span>
                 </a>
-          </div>
+          </div> -->
                 
           <!-- <div class="col-md-12 col-sm-12 col-xs-12 desktop_arrow">
             <div class="col-md-6 col-sm-6 col-xs-12" style="position: absolute;right: 0;bottom:20px;">
@@ -212,7 +223,7 @@
               </ol>   
            </div> 
         </div>
-    </div>
+        </div>
   </div>
 </div>
 
