--- a/opportunities.html
+++ b/opportunities.html
@@ -437,7 +437,17 @@
     </div>
   </div>
     </div>
+    <div class="col-md-12 col-sm-12 col-xs-12 contact">
+      <div class="container">
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="text-align: left;">
+          <span></span>
+          <p style="margin-bottom: 0;" >OR EMAIL YOUR RESUME, WE'LL FIGURE OUT WHERE YOU FIT IN</p>
+          <h6 style="font-size: 20px"><a href="mailto:life@crayond.com?Subject=Hey" target="_top">life@crayond.com</a></h6>
+        </div>
+      </div>
+     </div>
   </div>
+  
 </div>  
 </section>
 <!-- Start Section -->
