changed colors card life crayond

--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
     <!-- end -->
     <!-- next_billion -->
     <section class="next_billion">
-        <img data-aos="zoom-out-left" data-aos-duration="3000" alt="oval" src="./images/oval.png" class="ovel" />
-        <img data-aos="zoom-out-left" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
+        <img data-aos="zoom-out-up" data-aos-duration="3000" alt="oval" src="./images/oval.png" class="ovel" />
+        <img data-aos="zoom-out-up" data-aos-duration="5000" alt="oval-copy" src="./images/oval-copy-6.png" class="ovel-6" />
         <div class="container billion">
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 titel_button">
                 <button class="button fontLatoRegular">Let's get serious &nbsp <span> </span></button>
@@ -505,7 +505,7 @@
             </div>
         </div>
         <img data-aos="zoom-in-up" data-aos-duration="5000" alt="path-3-copy" src="./images/path-3-copy.png" class="path-3" />
-        <img data-aos="zoom-out-right" data-aos-duration="3000" alt="path-3" src="./images/path-3.png" class="path" />
+        <img data-aos="zoom-out-down" data-aos-duration="3000" alt="path-3" src="./images/path-3.png" class="path" />
     </section>
     <!-- end -->
     <!-- main footer -->
