--- a/opportunities.html
+++ b/opportunities.html
@@ -438,13 +438,19 @@
   </div>
     </div>
     <div class="col-md-12 col-sm-12 col-xs-12 contact">
-      <div class="container">
-        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " style="text-align: left;">
-          <span></span>
-          <p style="margin-bottom: 0;" >OR EMAIL YOUR RESUME, WE'LL FIGURE OUT WHERE YOU FIT IN</p>
-          <h6 style="font-size: 20px"><a href="mailto:life@crayond.com?Subject=Hey" target="_top">life@crayond.com</a></h6>
+      <!-- <div class="container"> -->
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 box_info">
+          <span class="image_box">
+            <span class="life_icon">
+              <img alt="shape" src="./images/send-mail-red.svg" />
+            </span>
+            <div class="life_text">
+              <p class="discription_life fontLatoRegular" >OR EMAIL YOUR RESUME, WE'LL FIGURE OUT WHERE YOU FIT IN</p>
+              <span style="font-size: 20px"><a href="mailto:life@crayond.com?Subject=Hey" target="_top" class="fontGraphikMedium">life@crayond.com</a></span>
+            </div>
+          </span>
         </div>
-      </div>
+      <!-- </div> -->
      </div>
   </div>
   
