--- a/who_we_are.html
+++ b/who_we_are.html
@@ -63,13 +63,13 @@
     </div>
     <!-- end -->
     <!-- background video -->
-    <!-- <section class="first_section video_player" >
+    <section class="first_section video_player" >
         <div class="container-fluid" style="padding: 0px;">
             <video autoplay loop >
-                <source src="./assets/vidoes/Website Animation final.mp4" type="video/mp4">
+                <source src="./images/demonstration.mp4" type="video/mp4">
             </video>
         </div>
-    </section> -->
+    </section>
     <!-- end -->
     <!-- main title -->
     <section class="first_section header_text">
@@ -77,7 +77,7 @@
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_1 fontGraphikBold">
                 <p style="margin-bottom: 0;">Bring your <br /> Product Idea to Life</p>
             </div>
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
+            <!-- <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12">
                 <img alt="Border" src="./images/Border-02.svg" class="Line-1" />
             </div>
             <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 banner_text_2 fontLatoRegular">
@@ -91,32 +91,11 @@
                             SCREW IT, LET'S DO IT! &nbsp 
                     <i class="fa fa-chevron-right" aria-hidden="true"></i>
                 </span></button>
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- end -->
-    <!-- other_brand details -->
-    <section class="other_brand">
-        <div class="container" style="padding: 0;">
-            <div class="col-12 col-xs-12 col-ms-12 col-md-12 col-lg-12 col-xl-12 brands" style="padding: 0;">
-                <div class="branding_list">
-                    <img alt="Benz" class="brands_logos img1" src="./images/Benz.svg" style="width: 150px">
-                    <img alt="Emtax" class="brands_logos img2" src="./images/Emtax.svg" style="width: 124px;">
-                    <img alt="Zibahub" class="brands_logos img3" src="./images/Zibahub.svg" style="width: 80px;">
-                    <img alt="pyt-logo" class="brands_logos img4" src="./images/pyt-logo.svg" style="width: 160px">
-                    <img alt="Pinecrow" class="brands_logos img5" src="./images/Pinecrow.svg" style="width: 140px;">
-                </div>   
-                <marquee behavior="scroll" direction="left" scrollamount="3" style="display: none;">
-                    <img alt="Benz" class="brands_logos" src="./images/Benz.svg" style="width: 150px">
-                    <img alt="Emtax" class="brands_logos" src="./images/Emtax.svg" style="width: 124px;">
-                    <img alt="Zibahub" class="brands_logos" src="./images/Zibahub.svg" style="width: 80px;">
-                    <img alt="pyt-logo" class="brands_logos" src="./images/pyt-logo.svg" style="width: 160px">
-                    <img alt="Pinecrow" class="brands_logos" src="./images/Pinecrow.svg" style="width: 140px;">
-                </marquee>
-            </div>
-        </div>
-    </section>
-    <!-- end -->
+    
     <!-- who_you_are -->
     <section class="who_you_are">
         <div class="container">
@@ -125,9 +104,9 @@
                     Who you are?
                 </h1>
                 <img alt="line 2" src="./images/line-2.png" />
-                <!-- <p class="banner--text fontLatoRegular">
+                <p class="banner--text fontLatoRegular">
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit illum aperiam.<br /> ea exercitationem .
-                </p> -->
+                </p>
             </div>
             <div class="card_div">
                 <div class="row">
