changed all image and video to webp

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
@@ -221,7 +220,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="img_section " style="margin: auto;">
-                            <img alt="Products Customer Love" src="./images/(A)-Products-Customer-Love.png" />
+                            <img alt="Products Customer Love" src="./images/(A)-Products-Customer-Love.webp" />
                         </div>
                     </div>
                 </div>
@@ -232,7 +231,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Modern-Engineering" src="./images/(B)-Modern-Engineering.png" />
+                            <img alt="Modern-Engineering" src="./images/(B)-Modern-Engineering.webp" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -258,7 +257,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Modern Engineering" src="./images/(B)-Modern-Engineering.png" />
+                            <img alt="Modern Engineering" src="./images/(B)-Modern-Engineering.webp" />
                         </div>
                     </div>
                 </div>
@@ -292,7 +291,7 @@
                         <!-- <div class="img_section" style="margin: auto;">
                         </div> -->
                         <div class="img_section" style="margin: auto;">
-                                <img alt="Early Launch" src="./images/(C)-Early-Launch.png" />
+                                <img alt="Early Launch" src="./images/(C)-Early-Launch.webp" />
                         </div>
                     </div>
                 </div>
@@ -303,7 +302,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(D)-Our-Pricing.png" />
+                            <img src="./images/(D)-Our-Pricing.webp" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -329,7 +328,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Our Pricing" src="./images/(D)-Our-Pricing.png" />
+                            <img alt="Our Pricing" src="./images/(D)-Our-Pricing.webp" />
                         </div>
                     </div>
                 </div>
