imag alt tag added 1

--- a/opportunities.html
+++ b/opportunities.html
@@ -129,7 +129,7 @@
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
                 <h1 class="fontGraphikSemibold">Clarity</h1>
-                <img class="line_path" src="./images/line-left.png" />
+                <img alt="line-left" class="line_path" src="./images/line-left.png" />
                  <p class="fontLatoRegular slider_discription">If you don’t stand for something, you will fall for anything. It’s such a messy world filled with distractions often disguised in the form of opportunities. You will end up nowhere if you don’t have a strong purpose that justifies each of your action. What is your vision statement?. Is your entire team glued to it?. Do you know where you are going?. Clarity is Mastery!</p>
               </div>
              </div>
@@ -142,7 +142,7 @@
               <div class="col-md-6 col-sm-6 col-xs-12">
                 <h5 class="fontGraphikMedium">CORE VALUES</h5>
                 <h1 class="fontGraphikSemibold">Culture</h1>
-                <img class="line_path" src="./images/line-left.png" />
+                <img alt="line-left"  class="line_path" src="./images/line-left.png" />
                  <p class="fontLatoRegular slider_discription">What makes your brand different?. Why should interesting people associate with you?. To win in the marketplace, you must first win in the workplace. The 3 ingredients of a winning culture according to me are Mutual Respect, Growth, Motivation. Culture has the force to make or break teams. A right culture is a catalyst for exponential growth. Culture is King!</p>
               </div>
              </div>
@@ -233,7 +233,7 @@
 </div>
 
 <div class="col-sm-12 col-md-12 col-xs-12" style="padding: 0">
-  <img src="./images/celebration.jpg" width="100%" height="auto" style="border-radius: 0">
+  <img alt="celebration" src="./images/celebration.jpg" width="100%" height="auto" style="border-radius: 0">
 </div>
 <div class="col-md-12 col-sm-12 col-xs-12 epic_works">
   <div class="container" style="padding: 75px 15px;">
@@ -302,7 +302,7 @@
         </div>
         <div class="col-md-12 col-xs-12 col-sm-12 ambience_card_mobile">
               <h5 style="padding-bottom: 8px;text-align: center;" class="fontGraphikSemibold">LOOK AT THE AMBIENCE</h5>
-              <img class="img-responsive" style="width: 100%; padding: 20px 0px 90px 0px;" src="./images/04_ambiencepic.png" style="" >
+              <img alt="04_ambiencepic" class="img-responsive" style="width: 100%; padding: 20px 0px 90px 0px;" src="./images/04_ambiencepic.png" style="" >
         </div>
   </div>
 </div>
