completed who we are page

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                         <a href="/" class="logo"><img alt="logo-crayond" src="./images/logo-crayond@2x.jpg"/>&nbsp;</a>
                     </div>
                     <div class="col-12 col-xs-12 col-ms-12 col-md-8 col-lg-8 col-xl-8 header_menu">
-                        <span class="activee"><a class="fontLatoRegular" href="/">Who we are?</a></span>
+                        <span class="activee"><a class="fontLatoRegular" href="/who_we_are.html">Who we are?</a></span>
                         <span><a class="fontLatoRegular" href="/">Products</a></span>
                         <span><a class="fontLatoRegular" href="/">Pricing</a></span>
                         <span><a class="fontLatoRegular" href="/">Blogs</a></span>
-                        <span><a class="fontLatoRegular" href="opportunities.html">Careers</a> </span>
+                        <span><a class="fontLatoRegular" href="opportunities.html">Opportunities</a> </span>
                         <span><a class="fontLatoRegular" href="/">Contact</a></span>
                     </div>
                     <div class="col-6 col-xs-6 col-ms-6 col-md-2 col-lg-2 col-xl-2 sign_btn">
