--- a/who_we_are.html
+++ b/who_we_are.html
@@ -157,30 +157,49 @@
                 
                 <!-- The slideshow -->
                 <div class="carousel-inner">
+                    <div class="row arrows">
+                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        </div>
+                        <div class="col-6 col-xs-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
+                        <a class="left" href="#demo" data-slide="prev">
+                            <span>
+                                <i class="fa fa-chevron-left" aria-hidden="true" ></i>
+                            </span>
+                        </a>
+                        <a class="right" href="#demo" data-slide="next">
+                            <span>
+                                <i class="fa fa-chevron-right" aria-hidden="true" ></i>
+                            </span>
+                        </a>
+                        </div>
+                    </div>
                     <div class="carousel-item active">
                         <div class="row">
-                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6" style="padding-right: 100px;">
+                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 slider_img">
                                 <img src="./images/01_clarity.png" alt="Los Angeles" width="1100" height="500" style="width: 100%;height: 100%;">
                             </div>
-                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                <p class="fontGraphikRegular" style="font-size: 20px;">AUG 29, 2012</p>
-                                <h1 class="fontGraphikSemibold" style="font-size: 48px;">Tagline</h1>
+                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 slider_discription">
+                                <p class="fontGraphikRegular date">AUG 29, 2012</p>
+                                <h1 class="fontGraphikSemibold titel" >Tagline</h1>
                                 <img alt="line 2" src="./images/line-left.png" />
-                                <p class="fontLatoRegular" style="font-size: 20px;line-height: 46px;">Where there is a will, there is a way! We decided to bootstrap. We couldn't afford an office so we shared a space with a kind enough friend. Crayon'd started its journey with 3 of us at the helm. The excitement and emotion is hard to explain.</p>   
+                                <p class="fontLatoRegular diccription" >Where there is a will, there is a way! We decided to bootstrap. We couldn't afford an office so we shared a space with a kind enough friend. Crayon'd started its journey with 3 of us at the helm. The excitement and emotion is hard to explain.</p>   
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item ">
+                        <div class="row">
+                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 slider_img">
+                                <img src="./images/01_clarity.png" alt="Los Angeles" width="1100" height="500" style="width: 100%;height: 100%;">
+                            </div>
+                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 slider_discription">
+                                <p class="fontGraphikRegular date">AUG 29, 2012</p>
+                                <h1 class="fontGraphikSemibold titel" >Tagline</h1>
+                                <img alt="line 2" src="./images/line-left.png" />
+                                <p class="fontLatoRegular diccription" >Where there is a will, there is a way! We decided to bootstrap. We couldn't afford an office so we shared a space with a kind enough friend. Crayon'd started its journey with 3 of us at the helm. The excitement and emotion is hard to explain.</p>   
                             </div>
                         </div>
                     </div>
                     <!-- <div class="carousel-item">
-                        <div class="row">
-                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                <img src="./images/01_clarity.png" alt="Los Angeles" width="1100" height="500" style="width: 100%;">
-                            </div>
-                            <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
-                                <p>asjkbasjkdbkasbdkbn</p>    
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
                         <div class="row">
                             <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                                 <img src="./images/Mascot.jpg" alt="Los Angeles" width="1100" height="500" style="width: 100%;">
@@ -193,12 +212,12 @@
                 </div>
                 
                 <!-- Left and right controls -->
-                <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <!-- <a class="carousel-control-prev" href="#demo" data-slide="prev">
                     <span class="carousel-control-prev-icon" style="color: gray;" ></span>
                 </a>
                 <a class="carousel-control-next" href="#demo" data-slide="next">
                     <span class="carousel-control-next-icon" style="color: gray;" ></span>
-                </a>
+                </a> -->
                 </div>     
             </div>
         </div>
@@ -220,7 +239,7 @@
             </div>
             <div class="card_div">
                 <div class="row">
-                    <img src="./images/Our-Culture-Illustration.webp" alt="Our Culture" />
+                    <img src="./images/Our-Culture-Illustration_new.webp" alt="Our Culture" />
                 </div>
             </div>
         </div>
