--- a/who_we_are.html
+++ b/who_we_are.html
@@ -239,7 +239,7 @@
             </div>
             <div class="card_div">
                 <div class="row">
-                    <img src="./images/Our-Culture-Illustration.png" alt="Our Culture" />
+                    <img src="./images/Our-Culture-Illustration-high.png" alt="Our Culture" />
                 </div>
             </div>
         </div>
@@ -271,7 +271,7 @@
                         <img class="team3" src="./images/celebration.jpg" alt="our culture" />
                     </div> -->
                     <div class="col-12 col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-                        <img class="" src="./images/Our-Team-Collage-Mobile Version.jpg" alt="our culture" style="width: 100%;height: 100%;"/>
+                        <img class="" src="./images/Our-Team-Collage-high.jpg" alt="our culture" style="width: 100%;height: 100%;"/>
                     </div>
                 </div>
             </div>
