--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
                         <div class="img_section " style="margin: auto;">
-                            <img alt="Products Customer Love" src="./images/(A)-Products-Customer-Love.png" />
+                            <img alt="Products Customer Love" src="https://www.crayond.com/crayond2020assets/(A)-Products-Customer-Love.png" />
                         </div>
                     </div>
                 </div>
@@ -231,7 +231,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Modern-Engineering" src="./images/(B)-Modern-Engineering.png" />
+                            <img alt="Modern-Engineering" src="https://www.crayond.com/crayond2020assets/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -257,7 +257,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Modern Engineering" src="./images/(B)-Modern-Engineering.png" />
+                            <img alt="Modern Engineering" src="https://www.crayond.com/crayond2020assets/(B)-Modern-Engineering.png" />
                         </div>
                     </div>
                 </div>
@@ -291,7 +291,7 @@
                         <!-- <div class="img_section" style="margin: auto;">
                         </div> -->
                         <div class="img_section" style="margin: auto;">
-                                <img alt="Early Launch" src="./images/(C)-Early-Launch.png" />
+                                <img alt="Early Launch" src="https://www.crayond.com/crayond2020assets/(C)-Early-Launch.png" />
                         </div>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                 <div class="row">
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 desktop_responce_img">
                         <div class="img_section" style="margin: auto;">
-                            <img src="./images/(D)-Our-Pricing.png" />
+                            <img src="https://www.crayond.com/crayond2020assets/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6">
@@ -328,7 +328,7 @@
                     </div>
                     <div class="col-12 col-sm-12 col-xs-12 col-md-6 col-lg-6 col-xl-6 mobile_responce_img" style="display: none;">
                         <div class="img_section" style="margin: auto;">
-                            <img alt="Our Pricing" src="./images/(D)-Our-Pricing.png" />
+                            <img alt="Our Pricing" src="https://www.crayond.com/crayond2020assets/(D)-Our-Pricing.png" />
                         </div>
                     </div>
                 </div>
@@ -451,7 +451,7 @@
                         <div class="row row_mobile" style="margin: 0px 0px 0px auto;">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 0;">
                                 <img alt="path-6.svg" src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
-                                <img alt="ceo.png" src="./images/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
+                                <img alt="ceo.png" src="https://www.crayond.com/crayond2020assets/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
                                 <img alt="path-6-copy" src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
                             </div>
                         </div>
@@ -474,7 +474,7 @@
                         <div class="row" style="margin: 0px 0px 0px auto;">
                             <div class="col-12 col-sm-12 col-xs-12 col-md-12 col-lg-12 col-xl-12" style="padding: 0;">
                                 <img src="./images/path-6.svg" style="position: absolute;width: 175px;top: 0;" />
-                                <img src="./images/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
+                                <img src="https://www.crayond.com/crayond2020assets/ceo.png" data-aos="zoom-in" data-aos-duration="10000" data-aos-easing="linear" style="padding: 10px;"/>
                                 <img src="./images/path-6-copy.svg" style="position: absolute; width: 76px; bottom: 0; right: 0;"/>
                             </div>
                         </div>
